--- a/Index/css/style.css
+++ b/Index/css/style.css
@@ -394,7 +394,7 @@ TEAM CSS
 
 /******fun facts*****/
 .funfacts{
-    background: url(../images/bg-2.jpg);
+    background: url(../images/123.jpg);
     background-position: 50% 0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -423,7 +423,7 @@ TEAM CSS
     font-weight: 300;
 }
 .testimonials{
-    background: url(../images/bg-3.jpg);
+    background: url(../images/bg1-3.jpg);
     background-position: 50% 0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -684,7 +684,7 @@ cta
 }
 /***contact****/
 #contact{
-      background: url(../images/bg-1.jpg);
+      background: url(../images/bg-12.jpg);
     background-position: 50% 0;
     background-size: cover;
     background-repeat: no-repeat;
